5.3.2 -> 5.4a1:
    - jbj: ruby: fix: retrofit RSTRING_PTR/RSTRING_LEN into ruby-1.8.5.
    - jbj: solve: loop over solve db's in a bag.
    - jbj: solve: stub-in toy add/del methods.
    - jbj: solve: permit multiple solvedb's in a rpmbag.
    - jbj: solve: generalize %_dbpath to permit multiple rpmdb's.
    - jbj: solve: flip --aid "opt-in" behavior to --noaid "opt-out".
    - jbj: solve: fix: don't free the package file name when depsolving.
    - jbj: stub in bag/svn/cvs/git objects.
    - jbj: tpm: stub in client startup code and ttpm executable.
    - jbj: tpm: rework the AutoFu through *.pc to set CFLAGS.
    - jbj: tpm: glue in an rpmtpm object wrapper.
    - jbj: tpm: stub in the AutoFu to detect libtpm.
    - jbj: fix: debugedit produce empty list file on MIPS.
    - jbj: asn1: wire up ctor's and dtor's internally.
    - jbj: asn1: stub in a wrapper object for libtasn1 (and PKIX and ASN.1).
    - jbj: cdsa: wire up RSA/DSA generate/sign/verify methods.

5.3.1 -> 5.3.2:
    - jbj: pgp: fix: algo parameters to signature/pubkey with msbits().
    - jbj: pgp: use the pubkey from header when installing.
    - jbj: pgp: retrieve pubkey from package header (if present).
    - jbj: pgp: add pgpArmorUnwrap to parse a pubkey from a buffer.
    - jbj: change to last (from first) pubkey in header argv array.
    - jbj: i18n: update po files (Translation Project).
    - jbj: fix: handle the V4 signature plaintext correctly.
    - jbj: add the DSA pubkey/signature to all packages produced by rpmbuild.
    - jbj: bc: disable DSA signhash16 checks for now.
    - jbj: bc: convert DSA digest from binary, no hex needed.
    - jbj: pgp: stub-in a pubkey octet pointer/length.
    - jbj: pgp: fix: expiry subpkts are relative, not absolute.
    - jbj: auto-sign all built packages with a non-repudiable DSA keypair.
    - jbj: ltc: implement RSA/DSA/ECDSA methods (RSA still has issues).
    - jbj: crypto: add --usecrypto options for libtomcrypt/cdsa.